overflow scroll fixes

--- a/styles/AdminDashboard.module.css
+++ b/styles/AdminDashboard.module.css
@@ -4,10 +4,12 @@
   flex-direction: column;
   gap: 20px;
 }
+
 .admin_links {
   display: flex;
   gap: 10px;
 }
+
 .admin_dashboard_content {
   padding-top: 25px;
   border-top: 1px solid red;
@@ -45,7 +47,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  width: 550px;
+  max-width: 550px;
   margin-left: auto;
   margin-right: auto;
   border: var(--border_widths) solid var(--all_colors);
